<resources>
    <string name="app_name">Blood Donor</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="about">About Blood Donor</string>
    <string name="hospital">Hospital</string>
    <string name="bloodbank">Blood Bank</string>
    <string name="donor">Donor</string>
    <string name="registeras">Register as a</string>
    <string name="registerhospita">Register Hospital</string>
    <string name="registerdonor">Register Donor</string>
    <string name="registerbloodbank">Register Blood Bank</string>
    <string name="yet">Don\'t have an account?</string>
    <string name="dashboard">Blood Donor Dashboard.</string>
    <string name="profile">My Profile</string>
    <string name="allrequest">All Blood Request</string>
    <string name="request">Create Request</string>
    <string name="delete">Delete</string>
    <string name="updateprofile">Update Profile</string>
    <string name="emergency">Emergency</string>
    <string name="myrequest">My Request</string>
    <string name="facts">Facts</string>
    <string name="calculate">Eligibility Test</string>
    <string name="updatebank">Update Bank</string>
    <string name="load">Loading...</string>
    <string name="createrequest">Create Blood Request</string>
    <string-array name="statesList">
        <item>State</item>
        <item>Abuja</item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Akwa Ibom</item>
        <item>Anambra</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Bornu</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nassarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>
    <string-array name="genderList">
        <item>Gender</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="bloodList">
        <item>Blood Type</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>
