<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LoginOption">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".60" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h2in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".95" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        app:layout_constraintBottom_toTopOf="@+id/h2"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="@+id/h1"/>

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="bottom"
        android:padding="10dip"
        app:centered="true"
        app:fillColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/h2in"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="@+id/h2"
        app:pageColor="#9B9999"
        app:snap="false" />
    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/h4"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="@+id/h3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:background="@drawable/buttonshapetwo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/h6"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="@+id/h5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/h8"
        app:layout_constraintEnd_toStartOf="@+id/v2"
        app:layout_constraintStart_toStartOf="@+id/v1"
        app:layout_constraintTop_toTopOf="@+id/h7" />

</androidx.constraintlayout.widget.ConstraintLayout>